--- a/lib/maze_server_web/templates/page/index.html.eex
+++ b/lib/maze_server_web/templates/page/index.html.eex
@@ -4,7 +4,7 @@
 </div>
 <div id="canv"></div>
 <div id="data">
-  <p id="error"></p>
+  <font id="error" color="red"></font>
   <input id="hsize" type="number" min="2" max="50" value="5">
   <input id="vsize" type="number" min="2" max="50" value="5">
   <select id="algorithm">
