--- a/lib/maze_server_web/templates/layout/app.html.eex
+++ b/lib/maze_server_web/templates/layout/app.html.eex
@@ -27,7 +27,7 @@
     </main>
     <footer>
       <center>
-        <p> created with ❤️ </p>
+        <p> created with <font color="#B40431"> ❤️ </font> </p>
         </center>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
