--- a/lib/maze_server_web/templates/layout/app.html.eex
+++ b/lib/maze_server_web/templates/layout/app.html.eex
@@ -12,7 +12,7 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="#"> Github </a></li>
+            <li><a href="https://github.com/thantez/maze_ai"> Github </a></li>
           </ul>
         </nav>
         <a href="#" class="phx-logo">
